# rust-solana-wallet

./: .env.example  .env.testing.example  .gitignore  Cargo.toml  Makefile.toml  README-tech.md  README.md
.github/workflows/: static-analysis.yml  tests.yml
docs/: Commands.md  NOTES-tech.md  Notes-tech.md
src/: lib.rs  main.rs
src/app/: cli.rs  create_wallet.rs  keypair_file.rs  keypair_manager.rs  mnemonic_manager.rs  mod.rs  transaction.rs  transaction_manager.rs  user_mnemonic.rs  wallet_manager.rs
src/bip/: mnemonic.rs  mod.rs  passphrase.rs  seed.rs
src/config/: wallet_config.rs
src/solana/: address.rs  balance.rs  mod.rs  transaction.rs
src/storage/: keypair.txt
src/utils/: env.rs
tests/: generate_seed_test.rs  mod.rs  wallet_test.rs  wallet_tests.rs
tests/cli/: from_mnemonic_test.rs  generate_seed_test.rs  get_pubkey_balance_b_test.rs  get_pubkey_balance_test.rs  mod.rs  send_test.rs
tests/commands/: balance_by_pubkey_test.rs  from_mnemonic_test.rs  generate_seed_test.rs  get_pubkey_balance_test.rs  mod.rs  pubkey_test.rs  recover_seed_test.rs  send_test.rs
tests/common/: mod.rs
tests/wallet_manager/: get_balance_by_pubkey_test.rs  mod.rs
