[package]
edition = "2021"
name = "rust-solana-wallet"
version = "1.0.0"
authors = ["Stephen Damian <contact@damian-freelance.fr>"]
homepage = "https://github.com/s-damian/rust-solana-wallet"
documentation = "https://github.com/s-damian/rust-solana-wallet/blob/main/README.md"
readme = "README.md"
keywords = ["rust", "solana", "wallet"]
license = "MIT"
repository = "https://github.com/s-damian/rust-solana-wallet"

[dependencies]
clap = {version = "4.5.4", features = ["derive"]}
chrono = "0.4.38"
solana-client = "1.18.11"
solana-sdk = "1.18.11"
tiny-bip39 = "0.8.2"
dotenv = "0.15"
bip32 = "0.3.0"
